--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-//Index / Active Tasks
 
 <html lang="en">
     <head>
@@ -8,7 +7,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" href="./css/index.css">
         <link rel="stylesheet" href="./alert/alert.css">
-        <title>Lista de Tareas</title>
+        <title>ToDoList</title>
     </head>
     <body>
         <nav class="navbar navbar-dark bg-dark menuBar">
